--- a/MVC_MultitecUA/Views/Home/Contact.cshtml
+++ b/MVC_MultitecUA/Views/Home/Contact.cshtml
@@ -5,13 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Escuela Politécnica Superior I - Universidad de Alicante<br />
+    San Vicente del Raspeig (Alicante, España), 03690<br />
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <a href="">Grupo público de Telegram</a></abbr><br/>
+    <strong>Contacto:</strong>   <a href="mailto:contacto.multitecua@gmail.com">contacto.multitecua@gmail.com</a>
 </address>
