--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - MultitecUA</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,13 +17,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MultitecUA", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Administrar
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Usuarios", "Index", "")</li>
+                            <li>@Html.ActionLink("Mensajes", "Index", "")</li>
+                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "")</li>
+                            <li>@Html.ActionLink("Proyectos", "Index", "")</li>
+                            <li>@Html.ActionLink("Solicitudes", "Index", "")</li>
+                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "")</li>
+                            <li>@Html.ActionLink("Eventos", "Index", "")</li>
+                            <li>@Html.ActionLink("Recuerdos", "Index", "")</li>
+                            <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
+                            <li>@Html.ActionLink("Servicios", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones - Usuarios", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones - Mensajes", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones - Proyectos", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones - Solicitudes", "Index", "")</li>
+                            <li>@Html.ActionLink("Notificaciones - Eventos", "Index", "")</li>
+                        </ul>
+                    </li>
+                    <li><a href="http://multitecua.ml">Contacto / Acerca de</a></li>
                 </ul>
             </div>
         </div>
@@ -32,7 +54,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Portal Web de la <a href="http://multitecua.ml">Asociación de Estudiantes MultitecUA</a> de la Universidad de Alicante</p>
         </footer>
     </div>
 
