--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Usuarios", "Index", "")</li>
+                            <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
                             <li>@Html.ActionLink("Mensajes", "Index", "")</li>
                             <li>@Html.ActionLink("Categorías de Usuarios", "Index", "")</li>
                             <li>@Html.ActionLink("Proyectos", "Index", "")</li>
