Preparando assembler y model de Proyecto

--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
                             <li>@Html.ActionLink("Mensajes", "Index", "")</li>
                             <li>@Html.ActionLink("Categorías de Usuarios", "Index", "")</li>
-                            <li>@Html.ActionLink("Proyectos", "Index", "")</li>
+                            <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
                             <li>@Html.ActionLink("Solicitudes", "Index", "")</li>
                             <li>@Html.ActionLink("Categorías de Proyectos", "Index", "")</li>
                             <li>@Html.ActionLink("Eventos", "Index", "")</li>
