--- a/MVC_MultitecUA/Views/Usuario/Index.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/Index.cshtml
@@ -8,6 +8,21 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+    
+    @using (Html.BeginForm("ForNick", "Usuario"))
+    {
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="col-md-10">
+                <label>Filtrar por: </label>
+                    <label for="nick">Nick: </label><input type="text" name="nick" />
+                <input type="submit" value="Buscar" class="btn btn-default" />
+            </div>
+
+        </div>
+    </div>
+    }
 </p>
 <table class="table">
     <tr>
@@ -33,12 +48,13 @@
             @Html.DisplayNameFor(model => model.Rol)
         </th>
         <th>
-            Filtros
+            Acciones
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
