No tengo ni puta idea de usar los assemblers asique sudo y lo hago todo de forma basica para la entrega de antes de vacas. Os kiero xiks

--- a/MVC_MultitecUA/Views/Proyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.ProyectoEN>
+﻿@model IEnumerable<MVC_MultitecUA.Models.ProyectoModel>
 
 @{
     ViewBag.Title = "Index";
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.usuarioId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
         <th>
@@ -22,6 +25,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.usuarioId)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
         </td>
