--- a/MVC_MultitecUA/Views/Usuario/Details.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/Details.cshtml
@@ -58,6 +58,14 @@
             @Html.DisplayFor(model => model.Nick)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Rol)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Rol)
+        </dd>
+
     </dl>
 </div>
 <p>
