--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -28,21 +28,15 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
-                            <li>@Html.ActionLink("Mensajes", "Index", "")</li>
-                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "")</li>
+                            <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
+                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
                             <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
-                            <li>@Html.ActionLink("Solicitudes", "Index", "")</li>
-                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "")</li>
-                            <li>@Html.ActionLink("Eventos", "Index", "")</li>
-                            <li>@Html.ActionLink("Recuerdos", "Index", "")</li>
+                            <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
+                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
+                            <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
+                            <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
                             <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
-                            <li>@Html.ActionLink("Servicios", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones - Usuarios", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones - Mensajes", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones - Proyectos", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones - Solicitudes", "Index", "")</li>
-                            <li>@Html.ActionLink("Notificaciones - Eventos", "Index", "")</li>
+                            <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
                         </ul>
                     </li>
                     <li><a href="http://multitecua.ml">Contacto / Acerca de</a></li>
