--- a/MVC_MultitecUA/Views/Evento/Create.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Create.cshtml
@@ -1,22 +1,21 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.EventoEN
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear nuevo evento";
 }
 
-<h2>Create</h2>
+<h2>Crear evento</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>EventoEN</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Nombre">Nombre</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
@@ -24,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Descripcion">Descripción</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
@@ -32,33 +31,33 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="FechaInicio">Fecha de Inicio</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo FechaInicio debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicio" name="FechaInicio" type="datetime" value="" />
                 @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="FechaFin">Fecha de Fin</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Fin debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaFin" name="FechaFin" type="datetime" value="" />
                 @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FechaInicioInscripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="FechaInicioInscripcion">Fecha de Inicio de Inscripción</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaInicioInscripcion, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha de Inicio de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicioInscripcion" name="FechaInicioInscripcion" type="datetime" value="" />
                 @Html.ValidationMessageFor(model => model.FechaInicioInscripcion, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FechaTopeInscripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="FechaTopeInscripcion">Fecha Tope de Inscripción</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaTopeInscripcion, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Tope de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaTopeInscripcion" name="FechaTopeInscripcion" type="datetime" value="" />
                 @Html.ValidationMessageFor(model => model.FechaTopeInscripcion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -72,7 +71,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index")
 </div>
 
 @section Scripts {
