--- a/MVC_MultitecUA/Views/Evento/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Delete.cshtml
@@ -1,24 +1,15 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.EventoEN
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Borrando evento";
 }
 
-<h2>Delete</h2>
+<h2>Borrar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres borrar el evento @ViewData["NombreEvento"]?</h3>
 <div>
-    <h4>EventoEN</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -28,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
+            Descripción
         </dt>
 
         <dd>
@@ -36,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaInicio)
+            Fecha de Inicio
         </dt>
 
         <dd>
@@ -44,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaFin)
+            Fecha de Fin
         </dt>
 
         <dd>
@@ -52,7 +43,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaInicioInscripcion)
+            Fecha de Inicio de Inscripción
         </dt>
 
         <dd>
@@ -60,7 +51,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaTopeInscripcion)
+            Fecha Tope de Inscripción
         </dt>
 
         <dd>
@@ -73,8 +64,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Borrar" class="btn btn-default" /> |
+            @Html.ActionLink("Volver", "Index")
         </div>
     }
 </div>
