--- a/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.RecuerdoEN
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar recuerdo";
 }
 
 <h2>Edit</h2>
@@ -42,7 +42,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index")
 </div>
 
 @section Scripts {
