--- a/MVC_MultitecUA/Views/Servicio/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Delete.cshtml
@@ -26,6 +26,13 @@
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Estado)
+        </dd>
 
     </dl>
 
