--- a/MVC_MultitecUA/Views/Servicio/Details.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultitecUAGenNHibernate.EN.MultitecUA.ServicioEN
+﻿@model MVC_MultitecUA.Models.Servicio
 
 @{
     ViewBag.Title = "Details";
@@ -10,14 +10,6 @@
     <h4>ServicioEN</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -33,10 +25,18 @@
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Estado)
+        </dd>
+       
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <!--Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    Html.ActionLink("Back to List", "Index")-->
 </p>
