--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
 			<div class="navbar-header">
-				<a href="../Home">
+				<a href="/">
 					<img src="../../Multitec.png" alt="Logo de la página. Enlace a índice">
 				</a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
