--- a/MVC_MultitecUA/Views/Evento/Details.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Details.cshtml
@@ -65,7 +65,7 @@
             @Html.HiddenFor(model => model.Id)
             <div class="form-horizontal">
                 <label>Agregar categoria:</label>
-                @Html.DropDownList("Categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasP"]))
+                @Html.DropDownList("Categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasAgregar"]))
                 <input type="submit" value="Agregar" class="btn btn-default" />
             </div>
         }
@@ -75,15 +75,18 @@
             @Html.HiddenFor(model => model.Id)
             <div class="form-horizontal">
                 <label>Eliminar categoria:</label>
-                @Html.DropDownList("Categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasP"]))
+                @Html.DropDownList("Categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasEliminar"]))
                 <input type="submit" value="Eliminar" class="btn btn-default" />
             </div>
         }
 
-        @Html.ActionLink("Proyectos", "ProyectosPorEvento", new { id = ViewData["IdEvento"] })
-        @Html.ActionLink("Proyectos", "EliminarProyectos", new { id = ViewData["IdEvento"] })
+        @Html.ActionLink("Proyectos asociados", "ProyectosPorEvento", "Proyecto", new { id = ViewData["IdEvento"] }, null)
         <br />
-        @Html.ActionLink("Crear recuerdo", "Create", "Recuerdo", new { id = ViewData["IdEvento"] },null)
+        @Html.ActionLink("Eliminar proyectos presentados", "eliminarProyectosAsociados", new { id = ViewData["IdEvento"] })
+        <br />
+        @Html.ActionLink("Crear recuerdo", "Create", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, null)
+        <br />
+        @Html.ActionLink("Ver Recuerdos", "porEvento", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, null)
 
 
     </div>
