--- a/MVC_MultitecUA/Views/Evento/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.EventoEN
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
 <h2>Editando evento: @ViewData["NombreEvento"]</h2>
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EventoEN</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -74,7 +73,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a eventos", "Index")
 </div>
 
 @section Scripts {
