--- a/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
@@ -34,7 +34,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.IdEvento, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input class="form-control" type="text" name="IdEvento"/>
+            <input class="form-control" type="text" name="IdEvento" value="@ViewData["idevento"]"/>
             @Html.ValidationMessageFor(model => model.IdEvento, "", new { @class = "text-danger" })
         </div>
     </div>
