--- a/MVC_MultitecUA/Views/Proyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Index.cshtml
@@ -7,6 +7,63 @@
 <h2>Proyectos</h2>
 
 <p>
+    <h3>Filtros:</h3>
+    @using (Html.BeginForm("ForNombre", "Proyecto"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="nombre">Nombre: </label><input class="form-control" type="text" name="nombre" />
+                    <input type="submit" value="Filtrar por Nombre" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("ForEstado", "Proyecto"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="nick">Estado: </label>
+                    @Html.DropDownList("estado", new SelectList((System.Collections.IEnumerable)ViewData["listaEstados"]), new { @class = "form-control" })
+                    <input type="submit" value="Filtrar por Estado" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("ForCategoriaProyecto", "Proyecto"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="nick">Categoría Proyecto: </label>
+                    @Html.DropDownList("categoriaP", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasP"]), new { @class = "form-control" })
+                    <input type="submit" value="Filtrar por Categoría Proyecto" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("ForCategoriaUsuario", "Proyecto"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="nick">Categoría Usuario: </label>
+                    @Html.DropDownList("categoriaU", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasU"]), new { @class = "form-control" })
+                    <input type="submit" value="Filtrar por Categoría Usuario" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+</p>
+<p>
 	@Html.ActionLink("Nuevo Proyecto", "Create")
 </p>
 <table class="table">
